Block admin role on register